@@ -2,23 +2,22 @@ package pe.edu.pucp.inf.bagcontrol.planificacion.modelos;
 
 import lombok.Data;
 import pe.edu.pucp.inf.bagcontrol.entidades.envios.Envio;
-import pe.edu.pucp.inf.bagcontrol.entidades.vuelo.Vuelo;
+import pe.edu.pucp.inf.bagcontrol.entidades.vuelo.VueloInstanciado;
 
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Data
 public class SolucionRuta {
 
     private List<RutaAsignada> asignaciones = new ArrayList<>();
-    private double fitness = Double.MAX_VALUE;
+    private double fitness;
 
-    public void agregarAsignacion(Envio envio, Vuelo vuelo) {
+    public void agregarAsignacion(Envio envio, VueloInstanciado vuelo) {
         asignaciones.add(new RutaAsignada(envio, vuelo));
     }
 
-    public Vuelo obtenerVueloAsignado(Envio envio) {
+    public VueloInstanciado obtenerVueloAsignado(Envio envio) {
         return asignaciones.stream()
                 .filter(a -> a.getEnvio().getIdPedido().equals(envio.getIdPedido()))
                 .map(RutaAsignada::getVuelo)
@@ -28,20 +27,19 @@ public class SolucionRuta {
 
     public List<Envio> obtenerEnviosConConflictos() {
         return asignaciones.stream()
-                .filter(a -> a.getVuelo() == null || a.getVuelo().isEstaCancelado())
+                .filter(a -> a.getVuelo() == null)
                 .map(RutaAsignada::getEnvio)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public SolucionRuta clonar() {
         SolucionRuta copia = new SolucionRuta();
         copia.setFitness(this.fitness);
 
-        List<RutaAsignada> nuevasAsignaciones = this.asignaciones.stream()
-                .map(a -> new RutaAsignada(a.getEnvio(), a.getVuelo()))
-                .collect(Collectors.toList());
+        for (RutaAsignada asignacion : this.asignaciones) {
+            copia.agregarAsignacion(asignacion.getEnvio(), asignacion.getVuelo());
+        }
 
-        copia.setAsignaciones(nuevasAsignaciones);
         return copia;
     }
 
@@ -49,7 +47,7 @@ public class SolucionRuta {
         for (RutaAsignada asignacion : asignaciones) {
             if (asignacion.getEnvio().getIdPedido().equals(movimiento.getEnvio().getIdPedido())) {
                 asignacion.setVuelo(movimiento.getVueloNuevo());
-                return;
+                break;
             }
         }
     }
